<resources>
    <string name="app_name">VTeamTrack</string>
    <string name="date">Date</string>
    <string name="yes">Yes</string>
    <string name="oponent">Oponent</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="players">Players</string>
    <string name="games">Games</string>
    <string name="trainings">Trainings</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="phone">Phone number</string>
    <string name="passRepeat">Repeat password</string>
    <string name="changePass">Change Password</string>
    <string name="oldPass">Old password</string>
    <string name="newPass">New password</string>
    <string name="unregister">Unregister player</string>
    <string name="unregister_message">Are you sure you want to unregister this player?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit profile</string>
    <string name="make_admin">Give admin permissions</string>
    <string name="make_admin_msg">Are you sure you want to give admin permissions to this player?</string>
    <string name="attendancy">Attendance</string>
    <string name="unset_admin">Take away admin permissions</string>
    <string name="unset_admin_msg">Are you sure you want to take away admin permissions to this player?</string>
    <string name="decline">Decline</string>
    <string name="team">Name of your team</string>
    <string name="welcome">Welcome</string>
    <string name="view_profile">View profile</string>
    <string name="view_posts">View posts</string>
    <string name="view">View</string>
    <string name="write_post"><font size="14">Write a new post...</font></string>
    <string name="post">Post</string>
    <string name="write_comment"><font size="14">Write a comment...</font></string>
    <string name="register_player">Player registration</string>
    <string name="register_trainer">Trainer registration</string>
    <string name="registrationLink">Click here for member registration.</string>
    <string name="post_delete">Are you sure you want to delete this post?</string>
    <string name="participation">Possible participation</string>
    <string name="view_trainings">View trainings</string>
    <string name="view_games">View games</string>
    <string name="delete">Delete</string>
    <string name="january">January</string>
    <string name="februrary">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">Nobember</string>
    <string name="december">December</string>
    <string name="log_out">Log out</string>
    <string name="surveys">Surveys</string>
    <string name="question">Question</string>
    <string name="add_answer">Add answer</string>
    <string name="add_survey">Add survey</string>
    <string name="no_surveys">No surveys</string>
    <string name="supervisor_acc">Request supervisor access</string>
    <string name="supervisor_req">Supervisor request</string>
    <string name="done">Done</string>
    <string name="player_email">Player email</string>
    <string name="socket_url">Socket Chat</string>

</resources>