<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.FeeListFragment">

    <LinearLayout
        android:id="@+id/tabLayoutFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/feeLayoutRv"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/januray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/january" />

        <Button
            android:id="@+id/february"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/februrary" />

        <Button
            android:id="@+id/march"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/march" />
        <Button
            android:id="@+id/april"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/april" />
        <Button
            android:id="@+id/may"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/may" />
        <Button
            android:id="@+id/june"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/june" />
        <Button
            android:id="@+id/july"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/july" />
        <Button
            android:id="@+id/august"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/august" />
        <Button
            android:id="@+id/september"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/september" />
        <Button
            android:id="@+id/october"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/october" />
        <Button
            android:id="@+id/november"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/november" />
        <Button
            android:id="@+id/december"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/december" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/feeLayoutRv"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/tabLayoutFee"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/validationDate"
            app:layout_constraintBottom_toTopOf="@id/rvFee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/validationDate" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
